# deja-dup

./: .bzrignore  .gcfunctions  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  HACKING  MAINTAINERS  Makefile  Makefile.am  NEWS  README.md  RELEASE-TODO  TODO  acinclude.m4  autogen.sh  configure.ac  deb-nightly  deja-dup.doap  meson.build  meson_options.txt
applet/: Makefile.am  StatusIcon.vala  applet.vala
common/: AsyncCommand.vala  Backend.vala  BackendAuto.vala  BackendFile.vala  BackendGoogleDrive.vala  BackendOpenstack.vala  BackendRackspace.vala  BackendS3.vala  BackendU1.vala  BackendUbuntuOne.vala  Checker.vala  CommonUtils.vala  DirHandling.vala  Duplicity.vala  DuplicityInfo.vala  DuplicityInstance.vala  FilteredSettings.vala  Makefile.am  Network.vala  NetworkManager.vala  Operation.vala  OperationBackup.vala  OperationFiles.vala  OperationRestore.vala  OperationStatus.vala  OperationVerify.vala  PythonChecker.vala  RecursiveDelete.vala  RecursiveMove.vala  RecursiveOp.vala  SimpleSettings.vala  ToolPlugin.vala  chacks.c  chacks.h  hacks.c  hacks.h  uriutils.c  uriutils.h
data/: CMakeLists.txt  Makefile.am  deja-dup-ccpanel.desktop.in  deja-dup-monitor.desktop.in  deja-dup-monitor.desktop.in.in  deja-dup-preferences.1  deja-dup-preferences.desktop.in  deja-dup-preferences.desktop.in.in  deja-dup.1  deja-dup.appdata.xml.in  deja-dup.convert  deja-dup.desktop.in  deja-dup.schemas.in  meson.build  org.gnome.DejaDup.Monitor.desktop.in  org.gnome.DejaDup.appdata.xml.in  org.gnome.DejaDup.desktop  org.gnome.DejaDup.desktop.in  org.gnome.DejaDup.gschema.xml  org.gnome.DejaDup.gschema.xml.in  org.gnome.DejaDup.policy.in  org.gnome.DejaDup.service.in  org.gnome.deja-dup.gschema.xml.in  resources.xml
data/interfaces/: directory_history_confirmation_page.glade  listfiles-crt-out.glade
data/ui/: help-overlay.ui  (+3 more)
deja-dup/: Assistant.vala  AssistantBackup.vala  AssistantDirectoryHistory.vala  AssistantOperation.vala  AssistantRestore.vala  AssistantRestoreMissing.vala  CMakeLists.txt  MainWindow.vala  Makefile.am  MountOperationAssistant.vala  Preferences.vala  Prompt.vala  RestoreAssistant.vala  StatusIcon.vala  deja-dup.appdata.xml  deja-dup.appdata.xml.in  deja-dup.desktop.in  main.vala  meson.build  resources.xml
help/: Makefile.am  deja-dup-applet.1  deja-dup-help.pot  deja-dup-monitor.1  deja-dup-preferences.1  deja-dup.1  deja-dup.omf.in  po4a.cfg
libdeja/: AsyncCommand.vala  Backend.vala  BackendAuto.vala  BackendDrive.vala  BackendFile.vala  BackendGCS.vala  BackendGDrive.vala  BackendGOA.vala  BackendGoa.vala  BackendLocal.vala  BackendOpenstack.vala  BackendRackspace.vala  BackendRemote.vala  BackendS3.vala  BackendU1.vala  CMakeLists.txt  Checker.vala  CommonUtils.vala  DirHandling.vala  FilteredSettings.vala  Makefile.am  Network.vala  Operation.vala  OperationBackup.vala  OperationFiles.vala  OperationRestore.vala  OperationStatus.vala  OperationVerify.vala  RecursiveDelete.vala  RecursiveMove.vala  RecursiveOp.vala  ToolPlugin.vala  libdeja.deps  meson.build
libdeja-dup/: Backend.vala  BackendFile.vala  BackendS3.vala  BackendSSH.vala  ButtonConnect.vala  ConfigBackend.vala  ConfigBool.vala  ConfigChoice.vala  ConfigDelete.vala  ConfigEntry.vala  ConfigFolder.vala  ConfigLabel.vala  ConfigLabelBool.vala  ConfigLabelList.vala  ConfigLabelLocation.vala  ConfigList.vala  ConfigLocation.vala  ConfigNumber.vala  ConfigPeriod.vala  ConfigWidget.vala  Duplicity.vala  DuplicityDry.vala  DuplicityInfo.vala  DuplicityInstance.vala  Makefile.am  Operation.vala  OperationBackup.vala  OperationCleanup.vala  OperationRestore.vala  OperationStatus.vala  PassphraseSchema.c  PassphraseSchema.h  RecursiveDelete.vala  RecursiveMove.vala  RecursiveOp.vala  ToggleGroup.vala  hacks.c  hacks.h  libdeja-dup.vala  mountoperation.c  (+1 more)
man/: CMakeLists.txt  Makefile.am  help2man  include.main  include.pref  po4a.cfg
monitor/: Makefile.am  README  monitor.vala
nautilus/: Makefile.am  NautilusExtension.c  NautilusExtension.h  module.vala  nautilus.vala  type.c  type.h
po/: CMakeLists.txt  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ar.po  ast.po  az.po  be.po  bg.po  bn.po  bo.po  bs.po  ca.po  ca@valencia.po  ce.po  cs.po  cy.po  da.po  de.po  deja-dup.pot  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  fy.po  gd.po  gl.po  he.po  hi.po  hr.po  (+52 more)
preferences/: ConfigBackend.vala  ConfigBool.vala  ConfigChoice.vala  ConfigEntry.vala  ConfigFolder.vala  ConfigList.vala  ConfigNumber.vala  ConfigPeriod.vala  ConfigWidget.vala  Makefile.am  Preferences.vala  PreferencesDialog.vala  PreferencesPanel.c  ToggleGroup.vala  preferences-main.vala  preferences.vala
src/: Backend.vala  BackendFile.vala  BackendS3.vala  Backup.vala  ConfigBool.vala  ConfigChoice.vala  ConfigEntry.vala  ConfigList.vala  ConfigWidget.vala  Duplicity.vala  DuplicityInfo.vala  MainWindow.vala  Makefile.am  Operation.vala  OperationBackup.vala  OperationCleanup.vala  OperationRestore.vala  PreferencesDialog.vala  Restore.vala  main.vala
tests/: CMakeLists.txt  Makefile.am  README  base.py  build-duplicity  interactive  local-backup  manual  print-settings  randomizer  restore-settings  runner.vala  shell  wrap
widgets/: ConfigBool.vala  ConfigChoice.vala  ConfigDelete.vala  ConfigEntry.vala  ConfigFolder.vala  ConfigLabel.vala  ConfigLabelBackupDate.vala  ConfigLabelBool.vala  ConfigLabelList.vala  ConfigLabelLocation.vala  ConfigLabelPolicy.vala  ConfigList.vala  ConfigLocation.vala  ConfigLocationCustom.vala  ConfigLocationDAV.vala  ConfigLocationFTP.vala  ConfigLocationFile.vala  ConfigLocationGoogleDrive.vala  ConfigLocationOpenstack.vala  ConfigLocationRackspace.vala  ConfigLocationS3.vala  ConfigLocationSMB.vala  ConfigLocationSSH.vala  ConfigLocationTable.vala  ConfigLocationU1.vala  ConfigLocationVolume.vala  ConfigNumber.vala  ConfigPeriod.vala  ConfigRelPath.vala  ConfigSwitch.vala  ConfigURLPart.vala  ConfigURLPartBool.vala  ConfigWidget.vala  Makefile.am  ToggleGroup.vala  WidgetUtils.vala  hacks.c  hacks.h  whacks.c  whacks.h
(+459 files in other folders)
